tests/error/func_arg_defined.gw
// [contains] already declared
function void test(int i, int i){}
